修正截图缩放比例的问题